fix: hero header on mobile (#4349)
Set background image for hero on overview to 100% on mobile as well

--- a/client/src/plus/deep-dives/overview/index.scss
+++ b/client/src/plus/deep-dives/overview/index.scss
@@ -21,13 +21,10 @@
     background-size: cover;
     content: "";
     display: block;
+    height: 100%;
     min-height: 365px;
     position: absolute;
     width: 100%;
-
-    @media #{layout.$mq-small-desktop-and-up} {
-      height: 100%;
-    }
   }
 
   .header-wrapper {
